crates/bevy_derive/compile_fail/tests/deref_derive/multiple_attributes_fail.stderr
error: `#[deref]` attribute can only be used on a single field
 --> tests/deref_derive/multiple_attributes_fail.rs:6:5
  |
6 |     #[deref] String
  |     ^^^^^^^^

error: `#[deref]` attribute can only be used on a single field
  --> tests/deref_derive/multiple_attributes_fail.rs:14:5
   |
14 |     #[deref]
   |     ^^^^^^^^

error: aborting due to 2 previous errors

